--- a/src/pug/pages/ui/contact-info.pug
+++ b/src/pug/pages/ui/contact-info.pug
@@ -71,7 +71,8 @@ block content
 									.contacts-text Выберите удобный способ оплаты
 									
 								.form-group-payment
-									.payment-type.payment-type-card.payment-type--active(data-type="payment-card") Оплата кредитной картой
+									.payment-type.payment-type-card.payment-type--active(data-type="payment-card") 
+										p.contacts-text Оплата кредитной картой
 									.payment-type.payment-type-cash(data-type="payment-cash") Оплата наличными
 							.contacts-block
 								+button-apply('Оформить заказ', '#')
