bugs fix after merge

--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -29,6 +29,7 @@
 		p.strong Блоки
 		.left-panel-nav
 
+			+linkLeftPanel("Иконки", "icons.html")
 			+linkLeftPanel("Баннеры", "banner.html")
 			+linkLeftPanel("Кнопки", "buttons.html")
 			+linkLeftPanel("Фильтр", "filter.html")
