some fix after merge

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -32,7 +32,7 @@
 
 @import "blocks/_icons.less";
 
-// @import "blocks/_photo-of-product.less";
+@import "blocks/_photo-of-product.less";
 
 
 @import "blocks/_order-subscribe.less";
