fixed weigh of search title

--- a/src/pug/sections/header-search.pug
+++ b/src/pug/sections/header-search.pug
@@ -19,8 +19,7 @@
 				+searchResult ('thumb-4.png', '<strong>Кошелек</strong> для монет N/S|Морской пейзаж')
 			.header-search-result-desktop
 				.header-search-result
-					.header-search-result__category 
-						strong Категории
+					.header-search-result__category Категории
 						.devide
 						span.header-search-result__link
 							a.header-search-result__link-item(href="") Новинки > Кошельки
@@ -34,8 +33,7 @@
 							a.header-search-result__link-item(href="") Кошельки > Большие кошельки
 						span.header-search-result__link
 							a.header-search-result__link-item(href="") Кошельки > Кошельки на круговой молнии
-					.header-search-result__goods
-						strong Товары
+					.header-search-result__goods Товары
 						.devide
 						span.header-search-result__link
 							a.header-search-result__link-item(href="") Кошелек «Мэйджик» с отд. для карт и мелочи
