--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -68,6 +68,7 @@
 		p.strong Страницы
 		.left-panel-nav
 			+linkLeftPanel("Главная", "../main.html")
+			+linkLeftPanel("Описание товара", "../product.html")
 			//- +linkLeftPanel("Каталог", "../catalog.html")
 
 #ui-nav-toggle Скрыть/Показать навигацию
