--- a/src/less/blocks/_sections.less
+++ b/src/less/blocks/_sections.less
@@ -31,3 +31,33 @@
 		text-align: center;
 	}
 }
+
+.section-breadcrumb {
+	margin-top: 8px;
+	margin-bottom: 28px;
+	
+	@media @tablet {
+		margin-top: 18px;
+		margin-bottom: 36px;
+	}
+}
+
+.section-similar-products {
+	margin-top: 30px;
+	margin-bottom: 24px;
+
+	@media @tablet {
+		margin-top: 22px;
+		margin-bottom: 30px;
+	}
+
+	@media @desktop {
+		margin-top: 40px;
+		margin-bottom: 34px;
+	}
+
+	@media @desktopXL {
+		margin-top: 64px;
+		margin-bottom: 48px;
+	}
+}
