--- a/src/less/main.less
+++ b/src/less/main.less
@@ -53,6 +53,7 @@
 @import "sections/_header-top";
 @import "sections/_catalogue-section.less";
 @import "sections/_footer-subscribe";
+@import "sections/_product.less";
 
 // Pages
 // Utils - Always Last - !IMPORTANT
