--- a/src/pug/pages/ui/photo-of-product.pug
+++ b/src/pug/pages/ui/photo-of-product.pug
@@ -26,4 +26,22 @@ block content
 						
 						.thumbnails__image(data-img-path = "../img/goods/purse_blue/blue-purse-4.jpg")
 							img(src="../img/good_thumbnail/blue-purse/thumb_blue-purse-4.png" alt="Картикна товара")
+		
+		br
+		.string Блок с кодом
+		pre.
+			.product-photo__switch-block
+				.switch-block__main-photo
+					img(src="../img/goods/purse_blue/blue-purse-1.jpg" alt="Картинка товара")
+				.switch-block__thumbnails.d-flex
+					.thumbnails__image(data-img-path = "../img/goods/purse_blue/blue-purse-1.jpg")
+						img(src="../img/good_thumbnail/blue-purse/thumb_blue-purse-1.png"  alt="Картикна товара")
 					
+					.thumbnails__image(data-img-path = "../img/goods/purse_blue/blue-purse-2.jpg")
+						img(src="../img/good_thumbnail/blue-purse/thumb_blue-purse-2.png" alt="Картикна товара")
+					
+					.thumbnails__image(data-img-path = "../img/goods/purse_blue/blue-purse-3.jpg")
+						img(src="../img/good_thumbnail/blue-purse/thumb_blue-purse-3.png" alt="Картинка товара")
+					
+					.thumbnails__image(data-img-path = "../img/goods/purse_blue/blue-purse-4.jpg")
+						img(src="../img/good_thumbnail/blue-purse/thumb_blue-purse-4.png" alt="Картикна товара")
