--- a/src/less/main.less
+++ b/src/less/main.less
@@ -29,18 +29,11 @@
 @import "blocks/_ui-accodeon.less";
 @import "blocks/_drop-down.less";
 @import "blocks/_btn-plus-minus.less";
-
 @import "blocks/_icons.less";
-
 @import "blocks/_photo-of-product.less";
-
-
 @import "blocks/_order-subscribe.less";
-
-
-
-
 @import "blocks/_stock-notify.less";
+@import "blocks/_color-line.less";
 
 
 // Sections
