added em dash in title

--- a/src/pug/pages/catalog.pug
+++ b/src/pug/pages/catalog.pug
@@ -14,8 +14,8 @@ block content
 				.catalog-breadcrumb
 					+breadcrumb-item('#', 'Главная страница')
 					+breadcrumb-item('#', 'Каталог')
-				.title-2.uppercase.catalog__title Мужские кошельки
-					span.catalog__title-count - 235
+				.title-2.uppercase.catalog__title Мужские кошельки 
+					span.catalog__title-count &mdash; 235
 				p.catalog__title-description Ожидайте яркий взрыв в вашей сумке с нашими уникальными кошельками для мужчин: кожа лучшего качества, элегантные конструкции и уникальные детали для непревзойденного продукта, который вы Можете наслаждаться каждый день!
 				.catalog-badge
 					a.catalog-badge__item(href="#")
