--- a/src/less/blocks/_order-subscribe.less
+++ b/src/less/blocks/_order-subscribe.less
@@ -1,7 +1,7 @@
 .order-one-click {
 	width: 360px;
 	padding-top: 11px;
-	position: absolute;
+	// position: absolute;
 	display: none;
 	background-color: @white;
 	z-index: 1;
@@ -9,7 +9,7 @@
 .order-subscribe {
 	width: 360px;
 	padding-top: 5px;
-	position: absolute;
+	// position: absolute;
 	display: none;
 	background-color: @white;
 	z-index: 1;
