--- a/src/less/main.less
+++ b/src/less/main.less
@@ -19,7 +19,6 @@
 @import "blocks/_banner.less";
 @import "blocks/_city-selection.less";
 @import "blocks/_forms.less";
-
 @import "blocks/_bread-crumb.less";
 @import "blocks/_filter.less";
 @import "blocks/_inputs.less";
@@ -29,18 +28,11 @@
 @import "blocks/_ui-accodeon.less";
 @import "blocks/_drop-down.less";
 @import "blocks/_btn-plus-minus.less";
-
 @import "blocks/_icons.less";
-
 @import "blocks/_photo-of-product.less";
-
-
 @import "blocks/_order-subscribe.less";
-
-
-
-
 @import "blocks/_stock-notify.less";
+@import "blocks/_modal-window.less";
 
 
 // Sections
