--- a/src/less/base/_variables.less
+++ b/src/less/base/_variables.less
@@ -75,6 +75,10 @@
 @darkblue: #002D76;
 @brown: #AF674F;
 
+//order
+@order-item-bg: #F5F7FA;
+@order-calc: #7E848C;
+
 // Вертикальный шаг
 @l1: 8px;
 @l2: @l1*2;
