--- a/src/pug/layouts/_mixins-links.pug
+++ b/src/pug/layouts/_mixins-links.pug
@@ -11,3 +11,4 @@ include ../mixins/_breadcrumb.pug
 include ../mixins/_filter-menu.pug
 include ../mixins/_svg.pug
 include ../mixins/_pagination.pug
+include ../mixins/_show-order.pug
