--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -42,6 +42,7 @@
 			+linkLeftPanel("Социальные сети", "social.html")
 			+linkLeftPanel("Пагинация", "pagination.html")
 			+linkLeftPanel("Выпадающий список", "drop-down.html")
+			+linkLeftPanel("Показать заказ", "show-order.html")
 
 
 
