color-line updated

--- a/src/pug/pages/ui/colors.pug
+++ b/src/pug/pages/ui/colors.pug
@@ -68,3 +68,10 @@ block content
 		+color-line
 		pre.
 			+color-line
+
+		br
+		h3 Цветная линия из блоков в меню
+		br
+		+color-line-menu
+		pre.
+			+color-line-menu	
