--- a/src/less/blocks/_color-line.less
+++ b/src/less/blocks/_color-line.less
@@ -6,7 +6,7 @@
 	display: none;
 
 	@media @tablet {width: 10%;}
-	@media @desktop {width: 9.09%;}
+	@media @desktopXL {width: 9.09%;}
 }
 
 .color-line-color-1 {background-color: @color-1;}
@@ -43,4 +43,10 @@
 	.color-line-color-11 {
 		display: inline-block;
 	}
+}
+
+.color-line--menu {
+	height: 2px;
+	width: 9.09%;
+	display: inline-block;
 }
