--- a/src/less/sections/_contact-info.less
+++ b/src/less/sections/_contact-info.less
@@ -7,6 +7,8 @@
 	@media @tablet{
 		padding-right: 20px;
 		padding-left: 20px;}
+	@media @desktop{font-size: 16px;}
+	@media @desktopXL{font-size: 18px;}
 	
 }
 .contacts-block{
@@ -18,25 +20,31 @@
 	width: 100%;
 	display: flex;
 	flex-wrap: nowrap;
+	align-items: center;
 	.mixin-margin(bottom,@l1);
+	
 }
 .contacts-title{
 	margin: 0;
 	padding: 0;
 	font-size: 18px;
-	margin-bottom: 16px;
+	margin-bottom: 4px;
 	text-align: left;
 	@media @desktop{font-size: 20px;}
+	@media @desktopXL{
+		margin-bottom: 10px;
+		font-size: 24px;}
 }
 .contacts-text{margin-right: 24px;}
 .contacts-text--large{
-	font-size: 16px;
+	//font-size: 16px;
 	
 }
 .contacts-link{
 	color: @contacts-text;
 	font-weight: 500;
-	border-bottom: 1px solid @contacts-text; 	
+	border-bottom: 1px solid @contacts-text; 
+	line-height: 1.3;	
 }
 .contacts-link:hover{
 	color: @text-red;
@@ -61,9 +69,15 @@
 	background-image: url('../../img/icons/marker-black.svg');
 	background-position: center;
 	background-size: cover;
+	@media @desktop{
+		width: 14px;
+		height: 14px;
+		top: 2px;
+	}
 }
 .contacts-link--notbold{
 	font-weight: 300;
+	font-size: 14px;
 }
 .contacts-link--active{
 	border-bottom: 0px;
@@ -83,10 +97,16 @@
 .pickup-points{
 	margin-bottom: 10px;
 	letter-spacing: -0.5px;
+	
 	@media @tablet{letter-spacing: 0px}
+	@media @desktop{font-size: 16px;}
 }
 .delivery-info{
 	color: @border-passive;
+	font-size: 12px;
+	@media @desktop{font-size: 14px;}
+	@media @desktopXL{font-size: 16px;}
+
 }
 .delivery-comments{
 	position: relative;
