--- a/src/less/blocks/_show-order.less
+++ b/src/less/blocks/_show-order.less
@@ -18,14 +18,14 @@
 .ordered-header{
 	position: relative;
  	font-size: 16px;
- 	letter-spacing: 2%;
- 	padding-top: 16px;
- 	padding-bottom: 16px;
+ 	letter-spacing: 1px;
+ 	padding: 16px;
+ 	border-bottom: 1px solid @color-line;
 }
 .ordered-header-arrow{
 	position: absolute;
 	top: 16px;
-	right: 0px;
+	right: 16px;
 }
 .ordered-line{
 	width: 100%;
@@ -46,6 +46,7 @@
 	font-size: 12px;
 	color:@text-light-grey;	
 	display: flex;
+	justify-content: space-between;
 	@media @desktop {font-size: 14px;}	
 	@media @desktopXL {font-size: 16px;}	
 	
