button and margin fix

--- a/src/less/sections/_product.less
+++ b/src/less/sections/_product.less
@@ -1,6 +1,5 @@
 .product-order-block {
 	position:relative;
-	// border:1px dashed grey;
 	margin-top: 24px;
 
 	@media @tablet {
@@ -14,7 +13,7 @@
 	.title-1 {
 		color:@text-card;
 		margin: 0;
-		letter-spacing: -1px;
+		letter-spacing: -1.5px;
 
 	}
 
@@ -99,6 +98,14 @@
 
 }
 
+.button-subscribe-block {
+	.button-store {
+		font-size: 16px;
+		padding-top: 15px;
+		padding-bottom: 15px;
+	}
+}
+
 .product-order__colors {
 	
 }
@@ -157,3 +164,4 @@
 	}
 }
 
+ 
