--- a/src/pug/pages/product.pug
+++ b/src/pug/pages/product.pug
@@ -95,7 +95,7 @@ block content
 							.product-order__buttons-block
 								+button-addcart("Добавить в корзину", "#")
 								+button-buyclick("Купить в 1 клик", "#")(id="one-click-button")
-								.button-subscribe-block
+								.button-subscribe-block.d-none.d-lg-block
 									+button-store('Подписаться','#')(id="subscribe-button")
 									p Укажите свой email и мы уведомим вас о поступлении отсутствующего товара
 							.product-order__colors
