color-line added instead of gradient-line

--- a/src/pug/pages/ui/footer-navigation.pug
+++ b/src/pug/pages/ui/footer-navigation.pug
@@ -12,6 +12,7 @@ block content
 			.section-ui
 				.footer-navigation
 					.footer-navigation-devide
+						+color-line
 					.footer-navigation-mobile
 						a.footer-navigation-mobile__link(href="#") О компании
 						a.footer-navigation-mobile__link(href="#") Адреса магазинов
