--- a/src/pug/sections/header-nav.pug
+++ b/src/pug/sections/header-nav.pug
@@ -13,7 +13,7 @@
 									ul.menu-level-2
 										li
 											a(href="#!").menu-icon Коллекция 1
-											.line-gradient--menu
+											+color-line-menu
 											ul.menu-level-3
 												li
 													a(href="#!") Визитницы и кардхолдеры
@@ -47,7 +47,7 @@
 
 										li
 											a(href="#!").menu-icon Коллекция 2
-											.line-gradient--menu
+											+color-line-menu
 											ul.menu-level-3
 												li
 													a(href="#!") Малые кошельки
@@ -59,7 +59,7 @@
 													a(href="#!") Кошельки на круговой молнии
 										li
 											a(href="#!").menu-icon Коллекция 3
-											.line-gradient--menu
+											+color-line-menu
 											ul.menu-level-3
 												li
 													a(href="#!") Сумки на плечо
@@ -78,7 +78,7 @@
 									ul.menu-level-2
 										li
 											a(href="#!").menu-icon Все сумки
-											.line-gradient--menu
+											+color-line-menu
 											ul.menu-level-3
 												li
 													a(href="#!") Сумки на плечо
@@ -92,7 +92,7 @@
 													a(href="#!") Рюкзаки
 										li
 											a(href="#!").menu-icon Все кошельки
-											.line-gradient--menu
+											+color-line-menu
 											ul.menu-level-3
 												li
 													a(href="#!") Малые кошельки
@@ -104,7 +104,7 @@
 													a(href="#!") Кошельки на круговой молнии
 										li
 											a(href="#!").menu-icon Аксессуары
-											.line-gradient--menu
+											+color-line-menu
 											ul.menu-level-3
 												li
 													a(href="#!") Визитницы и кардхолдеры
@@ -127,7 +127,7 @@
 									ul.menu-level-2
 										li 
 											a(href="#!").menu-icon Офис и Тревел
-											.line-gradient--menu
+											+color-line-menu
 											ul.menu-level-3
 												li
 													a(href="#!") Портфели
