--- a/src/pug/sections/header-search.pug
+++ b/src/pug/sections/header-search.pug
@@ -22,6 +22,7 @@
 					.header-search-result__category 
 						strong Категории
 						.devide
+							+color-line-menu
 						span.header-search-result__link
 							a.header-search-result__link-item(href="") Новинки > Кошельки
 						span.header-search-result__link
@@ -37,6 +38,7 @@
 					.header-search-result__goods
 						strong Товары
 						.devide
+							+color-line-menu
 						span.header-search-result__link
 							a.header-search-result__link-item(href="") Кошелек «Мэйджик» с отд. для карт и мелочи
 						span.header-search-result__link
