--- a/src/less/blocks/_colors.less
+++ b/src/less/blocks/_colors.less
@@ -68,58 +68,62 @@
 .color-redlight{background-color: @redlight;}
 .color-fongreen{background-color: @fongreen;}
 
+
+
+// !!! Перестали использовать, так как проблемы с размытостью в Chrome !!!
+
 //line-gradient
-.line-gradient {
-	height: 4px;
-	background:linear-gradient(to right, 
-		@color-1 20%, 
-		@color-2 20%,@color-2 40%,
-		@color-3 40%,@color-3 60%,
-		@color-4 60%,@color-4 80%,
-		@color-5 80%,@color-5 100%);
+// .line-gradient {
+// 	height: 4px;
+// 	background:linear-gradient(to right, 
+// 		@color-1 20%, 
+// 		@color-2 20%,@color-2 40%,
+// 		@color-3 40%,@color-3 60%,
+// 		@color-4 60%,@color-4 80%,
+// 		@color-5 80%,@color-5 100%);
 	
-	@media @tablet {
-		background:linear-gradient(to right, 
-			@color-1 10%, 
-			@color-2 10%,@color-2 20%,
-			@color-3 20%,@color-3 30%,
-			@color-4 30%,@color-4 40%,
-			@color-5 40%,@color-5 50%,
-			@red 50%,@red 60%,
-			@color-7 60%,@color-7 70%,
-			@color-8 70%,@color-8 80%,
-			@color-9 80%,@color-9 90%,
-			@color-10 90%,@color-10 100%);
-	}
+// 	@media @tablet {
+// 		background:linear-gradient(to right, 
+// 			@color-1 10%, 
+// 			@color-2 10%,@color-2 20%,
+// 			@color-3 20%,@color-3 30%,
+// 			@color-4 30%,@color-4 40%,
+// 			@color-5 40%,@color-5 50%,
+// 			@red 50%,@red 60%,
+// 			@color-7 60%,@color-7 70%,
+// 			@color-8 70%,@color-8 80%,
+// 			@color-9 80%,@color-9 90%,
+// 			@color-10 90%,@color-10 100%);
+// 	}
 
-	@media @desktop {
-		background:linear-gradient(to right, 
-			@color-1 9.09%, 
-			@color-2 9.09%,@color-2 18.18%,
-			@color-3 18.18%,@color-3 27.27%,
-			@color-4 27.27%,@color-4 36.36%,
-			@color-5 36.36%,@color-5 45.45%,
-			@red 45.45%,@red 54.54%,
-			@color-7 54.54%,@color-7 63.63%,
-			@color-8 63.63%,@color-8 72.72%,
-			@color-9 72.72%,@color-9 81.81%,
-			@color-10 81.81%,@color-10 90.90%,
-			@color-11 90.90%,@color-11 99.99%);
-	}
-}
+// 	@media @desktop {
+// 		background:linear-gradient(to right, 
+// 			@color-1 9.09%, 
+// 			@color-2 9.09%,@color-2 18.18%,
+// 			@color-3 18.18%,@color-3 27.27%,
+// 			@color-4 27.27%,@color-4 36.36%,
+// 			@color-5 36.36%,@color-5 45.45%,
+// 			@red 45.45%,@red 54.54%,
+// 			@color-7 54.54%,@color-7 63.63%,
+// 			@color-8 63.63%,@color-8 72.72%,
+// 			@color-9 72.72%,@color-9 81.81%,
+// 			@color-10 81.81%,@color-10 90.90%,
+// 			@color-11 90.90%,@color-11 99.99%);
+// 	}
+// }
 
-.line-gradient--menu {
-	height: 2px;
-	background:linear-gradient(to right, 
-		@color-1 9.09%, 
-		@color-2 9.09%,@color-2 18.18%,
-		@color-3 18.18%,@color-3 27.27%,
-		@color-4 27.27%,@color-4 36.36%,
-		@color-5 36.36%,@color-5 45.45%,
-		@red 45.45%,@red 54.54%,
-		@color-7 54.54%,@color-7 63.63%,
-		@color-8 63.63%,@color-8 72.72%,
-		@color-9 72.72%,@color-9 81.81%,
-		@color-10 81.81%,@color-10 90.90%,
-		@color-11 90.90%,@color-11 99.99%);
-}
+// .line-gradient--menu {
+// 	height: 2px;
+// 	background:linear-gradient(to right, 
+// 		@color-1 9.09%, 
+// 		@color-2 9.09%,@color-2 18.18%,
+// 		@color-3 18.18%,@color-3 27.27%,
+// 		@color-4 27.27%,@color-4 36.36%,
+// 		@color-5 36.36%,@color-5 45.45%,
+// 		@red 45.45%,@red 54.54%,
+// 		@color-7 54.54%,@color-7 63.63%,
+// 		@color-8 63.63%,@color-8 72.72%,
+// 		@color-9 72.72%,@color-9 81.81%,
+// 		@color-10 81.81%,@color-10 90.90%,
+// 		@color-11 90.90%,@color-11 99.99%);
+// }
