--- a/src/pug/pages/product.pug
+++ b/src/pug/pages/product.pug
@@ -39,7 +39,7 @@ block content
 				.order-one-click__close-icon
 
 	
-	//- Основная страница
+	//- Обертка для фильтра blur
 	.product-blur-wrapper
 
 		//- шапка
@@ -121,7 +121,7 @@ block content
 		.section-similar-products
 			.container
 				.similar-products__title.title-4 Похожие товары
-				.line-gradient
+				+color-line
 				.row
 					.col-6.col-md-3
 						+card--sale( '- 40%','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown', '#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893р.', '6 990р.' )
