--- a/src/pug/pages/ui/footer.pug
+++ b/src/pug/pages/ui/footer.pug
@@ -2,7 +2,7 @@ extends ../../layouts/ui-layout/ui-layout.pug
 
 block variables
 	- var title = 'Подвал - общий - UI-kit и HTML фреймворк - Документация';
-	- var pageClass = 'body__dashboard';
+	- var pageClass = 'body--dashboard';
 
 block content
 
@@ -13,6 +13,7 @@ block content
 			.container
 				.footer-navigation
 					.footer-navigation-devide
+						+color-line
 					.footer-navigation-mobile
 						a.footer-navigation-mobile__link(href="#") О компании
 						a.footer-navigation-mobile__link(href="#") Адреса магазинов
