--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -13,6 +13,7 @@
 	.left-panel__section
 		p.strong База
 		.left-panel-nav
+			+linkLeftPanel("Модальные окна", "modal-window.html")
 			+linkLeftPanel("Цвета", "colors.html")
 			+linkLeftPanel("Заголовки", "")
 			+linkLeftPanel("Типографика", "typhography.html")
