--- a/src/less/sections/_contact-info.less
+++ b/src/less/sections/_contact-info.less
@@ -21,8 +21,10 @@
 	display: flex;
 	flex-wrap: nowrap;
 	align-items: center;
-	.mixin-margin(bottom,@l1);
-	
+	.mixin-margin(bottom,@l1);	
+}
+.subtitle-block--justify{
+	justify-content: space-between;
 }
 .contacts-title{
 	margin: 0;
@@ -104,6 +106,7 @@
 .delivery-info{
 	color: @border-passive;
 	font-size: 12px;
+	line-height: 1.3;
 	@media @desktop{font-size: 14px;}
 	@media @desktopXL{font-size: 16px;}
 
@@ -127,8 +130,7 @@
 	left: 0;
 	width: 12px;
 	height: 12px;
-	cursor:pointer;
-	
+	cursor:pointer;	
 }
 .icon-comments--plus{background: url('../../img/icons/plus.svg') no-repeat center center;}	
 
