--- a/src/less/main.less
+++ b/src/less/main.less
@@ -28,6 +28,7 @@
 @import "blocks/_drop-down.less";
 @import "blocks/_btn-plus-minus.less";
 @import "blocks/_stock-notify.less";
+@import "blocks/_vertical-navigation.less";
 
 // Sections
 @import "sections/_ui-nav-panel"; // Left panel in documentation
