city selector added

--- a/src/less/sections/_contact-info.less
+++ b/src/less/sections/_contact-info.less
@@ -19,6 +19,7 @@
 .subtitle-block{
 	width: 100%;
 	display: flex;
+	position:relative;
 	flex-wrap: nowrap;
 	align-items: center;
 	.mixin-margin(bottom,@l1);	
