--- a/src/pug/sections/contacts-info.pug
+++ b/src/pug/sections/contacts-info.pug
@@ -14,9 +14,10 @@ form.contacts-info(action="" method="")
 		.title-4.contacts-title Адрес доставки
 		.subtitle-block
 			.contacts-text.contacts-address Санкт-Петербург
-			a.contacts-link.select-address(href="#") Выбрать город
-		
-		.contacts-block--border.contacts-block--active
+			a.contacts-link.select-address.city-toggle(href="#") Выбрать город
+			include ../../sections/_city-selection.pug
+
+		.contacts-block--border#delivery-pickup.contacts-block--active
 			.subtitle-block.subtitle-block--justify
 				.contacts-text.contacts-text--large #[strong Пункты самовывоза]
 				a.contacts-link.contacts-link--notbold(href="#") Изменить
@@ -26,7 +27,7 @@ form.contacts-info(action="" method="")
 				.delivery-date Доставка: #[span.delivery-date__val] Сегодня
 				.delivery-price Стоимость доставки: #[span.delivery-price__val] Бесплатно
 
-		.contacts-block--border.contacts-block--curier
+		.contacts-block--border#delivery-courier
 			.subtitle-block
 				.contacts-text.contacts-text--large #[strong Курьерская доставка]
 			.delivery-info
@@ -47,10 +48,10 @@ form.contacts-info(action="" method="")
 
 		.delivery-comments
 			.icon-comments.icon-comments--plus
-			.icon-comments.icon-comments--minus
 			a.contacts-link.delivery-comments--link(href="#") Добавить комментарий
-			textarea.comments-field(name="comments-field" )
-
+			.comments-field
+				textarea(name="comments-field" )
+	
 	.contacts-block
 		.title-4.contacts-title Способ оплаты
 		.subtitle-block
