--- a/src/pug/pages/ui/filter.pug
+++ b/src/pug/pages/ui/filter.pug
@@ -21,25 +21,25 @@ block content
 					.filter-icon-close
 					ul.filter-menu-l2
 						li
-							+filter-checkbox('Женщинам')
+							+checkboxFilter('Женщинам')
 						li
-							+filter-checkbox('Мужчинам')
+							+checkboxFilter('Мужчинам')
 				li ПО КАТЕГОРИЯМ
 					.filter-icon-close
 					ul.filter-menu-l2
 						li
-							+filter-checkbox('Кошельки')
+							+checkboxFilter('Кошельки')
 						li
-							+filter-checkbox('Сумки')
+							+checkboxFilter('Сумки')
 						li
-							+filter-checkbox('Аксессуары')
+							+checkboxFilter('Аксессуары')
 						li
-							+filter-checkbox('Офис и Тревел')
+							+checkboxFilter('Офис и Тревел')
 				li ПО РАЗМЕРУ
 					.filter-icon-close
 					ul.filter-menu-l2
 						li
-							+filter-checkbox('Большой')
+							+checkboxFilter('Большой')
 						li
 							+filter-checkbox('Малый')
 						li
@@ -65,11 +65,11 @@ block content
 					.filter-icon-close
 					ul.filter-menu-l2
 						li
-							+filter-checkbox('До 2 000р.')
+							+checkboxFilter('До 2 000р.')
 						li
-							+filter-checkbox('От 5 000р. до 10 000р.')
+							+checkboxFilter('От 5 000р. до 10 000р.')
 						li
-							+filter-checkbox('От 10 000р.')
+							+checkboxFilter('От 10 000р.')
 
 			+button-apply('Применить', '#')
 			label.filter-reset Очисить фильтр
