--- a/src/less/pages/catalog.less
+++ b/src/less/pages/catalog.less
@@ -100,12 +100,12 @@
 		line-height: 23px;
 		font-size: 18px;
 		text-align: center;
-		letter-spacing: 0.05em;
+		letter-spacing: 0.01em;
 		color: @text-light-grey;
 		width: 888px;
 		margin-left: auto;
 		margin-right: auto;
-		padding-bottom: 52px;
+		margin-bottom: 52px;
 	}
 }
 .catalog-badge {
