--- a/src/less/pages/catalog.less
+++ b/src/less/pages/catalog.less
@@ -65,7 +65,7 @@
 	margin-left: auto;
 }
 .catalog {
-	padding-bottom: @l3;
+	padding-bottom: 48px;
 	@media @tablet {
 		max-width: 100%!important;
 	}
