fixed padding bottom on all screen
fixed padding bottom on all screen

--- a/src/less/pages/catalog.less
+++ b/src/less/pages/catalog.less
@@ -65,13 +65,17 @@
 	margin-left: auto;
 }
 .catalog {
-	padding-bottom: 48px;
+	padding-bottom: @l3;
 	@media @tablet {
 		max-width: 100%!important;
 	}
 	@media @desktop {
 		margin-top: 29px;
 		padding-left: 16px;
+		padding-bottom: 41px;
+	}
+	@media @desktopXL {
+		padding-bottom: 48px;
 	}
 }
 .catalog-paginator {
