fixed footer menu

--- a/src/less/sections/_footer.less
+++ b/src/less/sections/_footer.less
@@ -25,3 +25,9 @@
 		padding-top: 0px;
 	}
 }
+.footer-navigation {
+	padding-top: 19px;
+}
+.footer-navigation-desktop__title {
+	font-weight: 600;
+}
