--- a/src/pug/sections/footer.pug
+++ b/src/pug/sections/footer.pug
@@ -1,6 +1,5 @@
 //- footer
 .footer-navigation-devide
-.container
 	.footer-navigation
 		.footer-navigation-mobile
 			a.footer-navigation-mobile__link(href="#") О компании
@@ -10,30 +9,25 @@
 			a.footer-navigation-mobile__link(href="#") Покупателю
 		.footer-navigation-desktop.col-10.offset-xl-1.offset-lg-1.col-xl-8
 			.footer-navigation-desktop__block
-				a.footer-navigation-desktop__title(href="#") 
-					strong О компании
+				a.footer-navigation-desktop__title(href="#") О компании
 				a.footer-navigation__link(href="#") О бренде
 				a.footer-navigation__link(href="#") Вакансии
 				a.footer-navigation__link(href="#") Сотрудничество
 				a.footer-navigation__link(href="#") Блог
 			.footer-navigation-desktop__block
-				a.footer-navigation-desktop__title(href="#")
-					strong Покупателю
+				a.footer-navigation-desktop__title(href="#") Покупателю
 				a.footer-navigation__link(href="#") Клубная карта
 				a.footer-navigation__link(href="#") Подарочная карта
 				a.footer-navigation__link(href="#") Хранение и уход
 				a.footer-navigation__link(href="#") Конфиденциальность
 			.footer-navigation-desktop__block
-				a.footer-navigation-desktop__title(href="#") 
-					strong Оплата и доставка
+				a.footer-navigation-desktop__title(href="#") Оплата и доставка
 				a.footer-navigation__link(href="#") Гарантия
 				a.footer-navigation__link(href="#") Условия доставки
 			.footer-navigation-desktop__block
-				a.footer-navigation-desktop__title(href="#")
-					strong Адреса магазинов
+				a.footer-navigation-desktop__title(href="#") Адреса магазинов
 			.footer-navigation-desktop__block
-				a.footer-navigation-desktop__title(href="#")
-					strong Контакты
+				a.footer-navigation-desktop__title(href="#") Контакты
 	.container
 		.row.footer-bottom
 			.col-12.offset-md-2.col-md-8.col-lg-6.offset-lg-1.col-xl-5.offset-xl-2
