--- a/src/less/sections/_footer.less
+++ b/src/less/sections/_footer.less
@@ -26,7 +26,9 @@
 	}
 }
 .footer-navigation {
-	padding-top: 19px;
+	@media @desktop {
+		padding-top: 19px;
+	}
 }
 .footer-navigation-desktop__title {
 	font-weight: 600;
