--- a/src/less/sections/_header-search.less
+++ b/src/less/sections/_header-search.less
@@ -97,10 +97,16 @@
 }
 .header-search-result__goods {
 	margin-left: 24px;
-
+	font-weight: 500;
 	@media @desktopXL {
 		margin-left: 32px;
 	}
+}
+.header-search-result__category > .devide {
+	height: 2px;
+}
+.header-search-result__goods > .devide {
+	height: 2px;
 }
 .header-search-result-desktop {
 	// position:absolute;
@@ -124,7 +130,7 @@
 .header-search-result__link-item {
 	line-height: normal;
 	font-size: 16px;
-	letter-spacing: 0.05em;
+	letter-spacing: 0.02em;
 	color: @text-light-grey;
 	&:hover, &:focus, &:active {
 		color: @text-red;
@@ -140,4 +146,3 @@
 		margin-left: 164px;
 	}
 }
-
