--- a/src/pug/pages/ui/header-search.pug
+++ b/src/pug/pages/ui/header-search.pug
@@ -26,8 +26,7 @@ block content
 					+searchResult ('thumb-4.png', '<strong>Кошелек</strong> для монет N/S|Морской пейзаж')
 				.header-search-result-desktop
 					.header-search-result
-						.header-search-result__category 
-							strong Категории
+						.header-search-result__category Категории
 							.devide
 							span.header-search-result__link
 								a.header-search-result__link-item(href="") Новинки > Кошельки
@@ -41,9 +40,8 @@ block content
 								a.header-search-result__link-item(href="") Кошельки > Большие кошельки
 							span.header-search-result__link
 								a.header-search-result__link-item(href="") Кошельки > Кошельки на круговой молнии
-						.header-search-result__goods
-							strong Товары
-							.devide
+						.header-search-result__goods Товары
+							.devide.header-search__devide
 							span.header-search-result__link
 								a.header-search-result__link-item(href="") Кошелек «Мэйджик» с отд. для карт и мелочи
 							span.header-search-result__link
