--- a/src/pug/sections/contacts-info.pug
+++ b/src/pug/sections/contacts-info.pug
@@ -8,14 +8,14 @@ form.contacts-info(action="" method="")
 		.form-group-user-data
 			+inputField('Имя Фамилия', 'Вы ничего не ввели', 'notEmpty', 'text')
 			+inputField('Email', 'Пожалуйста, введите действительный адрес электронной почты', 'email', 'text')
-			+inputField('Телефон', 'Вы ничего не ввели', 'notEmpty', 'text')
+			+inputField('Телефон', 'Вы ничего не ввели', 'notEmpty', 'text', 'mb-0').mb-0
 
 	.contacts-block
 		.title-4.contacts-title Адрес доставки
 		.subtitle-block
 			.contacts-text.contacts-address Санкт-Петербург
 			a.contacts-link.select-address.city-toggle(href="#") Выбрать город
-			include ../../sections/_city-selection.pug
+			include ./_city-selection.pug
 
 		.contacts-block--border#delivery-pickup.contacts-block--active
 			.subtitle-block.subtitle-block--justify
