--- a/src/less/blocks/_vertical-navigation.less
+++ b/src/less/blocks/_vertical-navigation.less
@@ -10,7 +10,7 @@
 	padding: 0;
 	border-bottom: 1px solid @color-line;
 }
-.cabinet-menu-link{
+.cabinet-menu-item__link{
 	display: block;
 	text-transform: uppercase;
 	font-size:16px;
@@ -18,13 +18,12 @@
 	padding: 16px;
 	padding-top: 15px;
 	padding-bottom: 15px;
-
 }
-.cabinet-menu-link--active{
+.cabinet-menu-item__link--active{
 	border-bottom: 2px solid @color-line;
 	font-weight: 700;
 }
-.cabinet-menu-link.cabinet-menu-link--active:hover{
+.cabinet-menu-item__link.cabinet-menu-item__link--active:hover{
 	color: @textMenu;	
 	cursor: default;
 	text-decoration: none;	
