--- a/src/pug/mixins/_vertical-menu.pug
+++ b/src/pug/mixins/_vertical-menu.pug
@@ -1,4 +1,4 @@
-mixin menu-item(href, itemTitle)
+mixin cabinet-menu-item(href, itemTitle)
 
 	li.cabinet-menu-item
-		a.cabinet-menu-link(href= href)&attributes(attributes) #{itemTitle}
+		a.cabinet-menu-item__link(href= href)&attributes(attributes) #{itemTitle}
